# attention-mechanisms-zoo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: benchmark_attention.py
notebooks/: 01_scaled_dot_product_attention.ipynb  02_multi_head_attention.ipynb  03_cross_attention.ipynb  04_masked_causal_attention.ipynb  05_sparse_attention.ipynb  06_linear_attention.ipynb  07_flash_attention.ipynb  08_multi_query_attention.ipynb  09_grouped_query_attention.ipynb  10_sliding_window_attention.ipynb
src/attention_zoo/: __init__.py  base.py  causal.py  cross_attention.py  flash.py  grouped_query.py  linear.py  multi_head.py  multi_query.py  scaled_dot_product.py  sliding_window.py  sparse.py  utils.py
tests/: test_attention.py  test_equivalence.py
